Update dotnet.yml TRY TO RUNdotnet test twice with a different artifact output on each run?

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -26,6 +26,8 @@ jobs:
       run: dotnet build --no-restore
     - name: Test with dotnet    
       run: dotnet test --no-restore --collect:"XPlat Code Coverage" --results-directory "TestResults-${{ matrix.dotnet-version }}"
+    - name: Test again with dotnet    
+      run: dotnet test --no-restore --logger trx --results-directory "TestResults-${{ matrix.dotnet-version }}"
     - name: Upload dotnet test results
       uses: actions/upload-artifact@v4
       with:
