Update dotnet.yml Further Modified attempt to create 2 separate Artifacts       with: (1) name: dotnet-coverage-results-${{ matrix.dotnet-version }}   (2) path: CoverageResults-${{ matrix.dotnet-version }}

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -31,7 +31,7 @@ jobs:
     - name: Upload dotnet Coverage results
       uses: actions/upload-artifact@v4
       with:
-        name: dotnet-results-${{ matrix.dotnet-version }}
+        name: dotnet-coverage-results-${{ matrix.dotnet-version }}
         path: CoverageResults-${{ matrix.dotnet-version }}
     - name: Upload dotnet test results
       uses: actions/upload-artifact@v4
